// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ScaleFilter /> should render correctly 1`] = `
<Styled(Styled(styled.div))>
  <Flex
    align="center"
    justify="space-between"
    padding="1rem"
  >
    <Styled(styled.p)
      size={13}
      weight={600}
    >
      Filter by Price Scale
    </Styled(styled.p)>
    <styled.button>
      Clear
    </styled.button>
  </Flex>
  <Styled(styled.div)
    height="270px"
  >
    <styled.ul />
  </Styled(styled.div)>
</Styled(Styled(styled.div))>
`;

exports[`<ScaleFilter /> should render correctly with scales 1`] = `
<Styled(Styled(styled.div))>
  <Flex
    align="center"
    justify="space-between"
    padding="1rem"
  >
    <Styled(styled.p)
      size={13}
      weight={600}
    >
      Filter by Price Scale
    </Styled(styled.p)>
    <styled.button>
      Clear
    </styled.button>
  </Flex>
  <Styled(styled.div)
    height="270px"
  >
    <styled.ul>
      <styled.li
        key="1"
      >
        <styled.input
          checked={false}
          onChange={[Function]}
        />
        <Styled(styled.p)
          size={13}
        >
          Some Scale 1
        </Styled(styled.p)>
      </styled.li>
      <styled.li
        key="2"
      >
        <styled.input
          checked={false}
          onChange={[Function]}
        />
        <Styled(styled.p)
          size={13}
        >
          Some Scale 2
        </Styled(styled.p)>
      </styled.li>
      <styled.li
        key="3"
      >
        <styled.input
          checked={false}
          onChange={[Function]}
        />
        <Styled(styled.p)
          size={13}
        >
          Some Scale 3
        </Styled(styled.p)>
      </styled.li>
      <styled.li
        key="4"
      >
        <styled.input
          checked={false}
          onChange={[Function]}
        />
        <Styled(styled.p)
          size={13}
        >
          Some Scale 4
        </Styled(styled.p)>
      </styled.li>
      <styled.li
        key="5"
      >
        <styled.input
          checked={false}
          onChange={[Function]}
        />
        <Styled(styled.p)
          size={13}
        >
          Some Scale 5
        </Styled(styled.p)>
      </styled.li>
    </styled.ul>
  </Styled(styled.div)>
</Styled(Styled(styled.div))>
`;

exports[`<ScaleFilter /> should render correctly with selected scales 1`] = `
<Styled(Styled(styled.div))>
  <Flex
    align="center"
    justify="space-between"
    padding="1rem"
  >
    <Styled(styled.p)
      size={13}
      weight={600}
    >
      Filter by Price Scale
    </Styled(styled.p)>
    <styled.button>
      Clear
    </styled.button>
  </Flex>
  <Styled(styled.div)
    height="270px"
  >
    <styled.ul>
      <styled.li
        key="1"
      >
        <styled.input
          checked={false}
          onChange={[Function]}
        />
        <Styled(styled.p)
          size={13}
        >
          Some Scale 1
        </Styled(styled.p)>
      </styled.li>
      <styled.li
        key="2"
      >
        <styled.input
          checked={false}
          onChange={[Function]}
        />
        <Styled(styled.p)
          size={13}
        >
          Some Scale 2
        </Styled(styled.p)>
      </styled.li>
      <styled.li
        key="3"
      >
        <styled.input
          checked={false}
          onChange={[Function]}
        />
        <Styled(styled.p)
          size={13}
        >
          Some Scale 3
        </Styled(styled.p)>
      </styled.li>
      <styled.li
        key="4"
      >
        <styled.input
          checked={false}
          onChange={[Function]}
        />
        <Styled(styled.p)
          size={13}
        >
          Some Scale 4
        </Styled(styled.p)>
      </styled.li>
      <styled.li
        key="5"
      >
        <styled.input
          checked={false}
          onChange={[Function]}
        />
        <Styled(styled.p)
          size={13}
        >
          Some Scale 5
        </Styled(styled.p)>
      </styled.li>
    </styled.ul>
  </Styled(styled.div)>
</Styled(Styled(styled.div))>
`;
